--- a/SaleManager.Web/Views/Supplier/Add.cshtml
+++ b/SaleManager.Web/Views/Supplier/Add.cshtml
@@ -14,7 +14,7 @@
     div class="form-group">
     <label for="Name">Name</label>
     <input name="Name" value="@Model.Name" id="Name" type="text" class="form-control" required maxlength="50">
-    <small class="form-text text-danger invalid-feedback">@Html.ValidationMessage("Name")</small>
+    <small class="form-text text-danger">@Html.ValidationMessage("Name")</small>
     </div>
     <div class="form-group">
         <label for="contact1">Contact1</label>
