--- a/SaleManager.Web/Views/Product/Index.cshtml
+++ b/SaleManager.Web/Views/Product/Index.cshtml
@@ -47,7 +47,7 @@
             <td>@item.Quantity</td>
             <td>@item.Unit</td>
             <td>@item.Price</td>
-            <td><img src="@Url.Content("~/UploadFiles/Products/Thumbnails/" + item.Img)" alt="@item.Name" class="img-thumbnail"></td>
+            <td><img src="@Url.Content("~/UploadFiles/Products/Thumbnails/" + item.ImgName)" alt="@item.Name" class="img-thumbnail"></td>
         </tr>
         }
     </tbody>    
