--- a/SaleManager.Web/Views/Shared/_Layout.cshtml
+++ b/SaleManager.Web/Views/Shared/_Layout.cshtml
@@ -6,8 +6,10 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
+    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
     @Scripts.Render("~/bundles/commonjs")
 </head>
 <body>
@@ -53,7 +55,7 @@
             </div>
         </div>
 
-        <div class="body-content">
+        <div class="body-content mt-5">
             @RenderBody()
             <hr />
             <footer>
