--- a/SaleManager.Web/Views/SellMarket/Index.cshtml
+++ b/SaleManager.Web/Views/SellMarket/Index.cshtml
@@ -24,6 +24,11 @@
 
     <div class="row">
         <div class="col-lg-6">
+            <div class="form-group row">
+                <input type="text" class="form-control col-8" id="barcode" placeholder="Barcode">
+                <button type="button" class="btn btn-info col-2 offset-1"><i class="fas fa-search-plus"></i></button>
+            </div>
+
             <nav>
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
                     <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Hoá đơn 1111</a>
@@ -145,7 +150,7 @@
                             </div>
                         </div>
                     </form>
-                    <div class="d-flex justify-content-between">
+                    <div class="d-flex justify-content-between col-10 offset-1">
                         <button type="button" class="btn btn-primary">Thanh toán</button>
                         <button type="button" class="btn btn-warning">Xuất hd</button>
                         <button type="button" class="btn btn-secondary">Nhập lại</button>
@@ -159,7 +164,7 @@
 
         <div class="col-lg-6 row p-lg-2">
             <div class="card col-sm-6 col-md-4 col-lg-3" style="width: 10rem;height:auto;">
-                <img src="~/UploadFiles/Products/Thumbnails/8934988021028.jpg" class="card-img-top" alt="..." style="width:auto;height:auto;">
+                <img src="~/UploadFiles/Products/Thumbnails/8934988021028-.jpg" class="card-img-top" alt="..." style="width:auto;height:auto;">
                 <div class="card-body">
                     <p class="card-text">Dầu ăn simply 2l</p>
                 </div>
@@ -168,7 +173,7 @@
                 </div>
             </div>
             <div class="card col-sm-6 col-md-4 col-lg-3" style="width: 10rem;height:auto;">
-                <img src="~/UploadFiles/Products/Thumbnails/8934988021028.jpg" class="card-img-top" alt="..." style="width:auto;height:auto;">
+                <img src="~/UploadFiles/Products/Thumbnails/8934988021028-.jpg" class="card-img-top" alt="..." style="width:auto;height:auto;">
                 <div class="card-body">
                     <p class="card-text">Dầu ăn simply 2l</p>
                 </div>
@@ -177,7 +182,7 @@
                 </div>
             </div>
             <div class="card col-sm-6 col-md-4 col-lg-3" style="width: 10rem;height:auto;">
-                <img src="~/UploadFiles/Products/Thumbnails/8934988021028.jpg" class="card-img-top" alt="..." style="width:auto;height:auto;">
+                <img src="~/UploadFiles/Products/Thumbnails/8934988021028-.jpg" class="card-img-top" alt="..." style="width:auto;height:auto;">
                 <div class="card-body">
                     <p class="card-text">Dầu ăn simply 2l</p>
                 </div>
@@ -186,7 +191,7 @@
                 </div>
             </div>
             <div class="card col-sm-6 col-md-4 col-lg-3" style="width: 10rem;height:auto;">
-                <img src="~/UploadFiles/Products/Thumbnails/8934988021028.jpg" class="card-img-top" alt="..." style="width:auto;height:auto;">
+                <img src="~/UploadFiles/Products/Thumbnails/8934988021028-.jpg" class="card-img-top" alt="..." style="width:auto;height:auto;">
                 <div class="card-body">
                     <p class="card-text">Dầu ăn simply 2l</p>
                 </div>
@@ -195,7 +200,7 @@
                 </div>
             </div>
             <div class="card col-sm-6 col-md-4 col-lg-3" style="width: 10rem;height:auto;">
-                <img src="~/UploadFiles/Products/Thumbnails/8934988021028.jpg" class="card-img-top" alt="..." style="width:auto;height:auto;">
+                <img src="~/UploadFiles/Products/Thumbnails/8934988021028-.jpg" class="card-img-top" alt="..." style="width:auto;height:auto;">
                 <div class="card-body">
                     <p class="card-text">Dầu ăn simply 2l</p>
                 </div>
@@ -204,7 +209,7 @@
                 </div>
             </div>
             <div class="card col-sm-6 col-md-4 col-lg-3" style="width: 10rem;height:auto;">
-                <img src="~/UploadFiles/Products/Thumbnails/8934988021028.jpg" class="card-img-top" alt="..." style="width:auto;height:auto;">
+                <img src="~/UploadFiles/Products/Thumbnails/8934988021028-.jpg" class="card-img-top" alt="..." style="width:auto;height:auto;">
                 <div class="card-body">
                     <p class="card-text">Dầu ăn simply 2l</p>
                 </div>
@@ -213,7 +218,7 @@
                 </div>
             </div>
             <div class="card col-sm-6 col-md-4 col-lg-3" style="width: 10rem;height:auto;">
-                <img src="~/UploadFiles/Products/Thumbnails/8934988021028.jpg" class="card-img-top" alt="..." style="width:auto;height:auto;">
+                <img src="~/UploadFiles/Products/Thumbnails/8934988021028-.jpg" class="card-img-top" alt="..." style="width:auto;height:auto;">
                 <div class="card-body">
                     <p class="card-text">Dầu ăn simply 2l</p>
                 </div>
