--- a/SaleManager.Web/Views/Product/Add.cshtml
+++ b/SaleManager.Web/Views/Product/Add.cshtml
@@ -28,7 +28,7 @@
     <div class="form-group row">
         <label for="Price" class="col-sm-2 col-form-label col-form-label-sm">Price</label>
         <div class="col-sm-10">
-            <input name="Price" value="@Model.Price" type="text" class="form-control" id="Price">
+            <input name="Price" value="@Model.Price" type="text" class="form-control" id="Price" data-type="currency">
             <small class="form-text text-danger">@Html.ValidationMessage("Price")</small>
         </div>
     </div>
@@ -56,14 +56,10 @@
         </div>
     </div>
     <div class="form-group row">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addImageModal">
-            Add Image
-        </button>
         <label for="Img" class="col-sm-2 col-form-label col-form-label-sm">Img</label>
-        <div class="col-sm-10">
-            <input name="Image" type="file" class="form-control" id="Img">
+        <div class="col-sm-10 row">
+            <input name="Image" type="file" class="form-control-file pl-3" id="Img">
             <small class="form-text text-danger">@Html.ValidationMessage("ImgPath")</small>
-            <img src="@Model.ImgPath" alt="@Model.Name" class="img-thumbnail">
         </div>
     </div>
     <div class="row">
