modify layout sale market

--- a/SaleManager.Web/Content/sellMarket.css
+++ b/SaleManager.Web/Content/sellMarket.css
@@ -4,3 +4,11 @@
 i.far.fa-times-circle:hover {
     font-size: large;
 }
+
+i.fas.fa-chevron-up:hover{
+    font-size: large;
+}
+
+i.fas.fa-chevron-down:hover {
+    font-size: large;
+}
