--- a/SaleManager.Web/Views/Product/Add.cshtml
+++ b/SaleManager.Web/Views/Product/Add.cshtml
@@ -66,11 +66,11 @@
         <label for="Quantity" class="col-sm-2 col-form-label col-form-label-sm">Quantity</label>
         <div class="col-sm-10 row">
             <div class="col-sm-4">
-                <input name="Price" value="@Model.Quantity" type="text" class="form-control" id="Quantity">
+                <input name="Quantity" value="@Model.Quantity" type="text" class="form-control" id="Quantity">
                 <small class="form-text text-danger">@Html.ValidationMessage("Quantity")</small>
             </div>
             <div class="col-sm-6 row">
-                <label for="Quantity" class="col-sm-3 col-form-label col-form-label-sm">Unit</label>
+                <label for="Unit" class="col-sm-3 col-form-label col-form-label-sm">Unit</label>
                 <div class="col-sm-9">
                     <input name="Unit" value="@Model.Unit" type="text" class="form-control" id="Unit">
                     <small class="form-text text-danger">@Html.ValidationMessage("Unit")</small>
