--- a/SaleManager.Web/Views/Product/Index.cshtml
+++ b/SaleManager.Web/Views/Product/Index.cshtml
@@ -21,7 +21,8 @@
 <a href="@Url.Action("Add")" role="button" class="btn btn-outline-info">
     <i class="fas fa-plus-circle"></i>
 </a>
-<table class="table table-striped">
+
+<table class="table table-striped datatable">
     <thead>
         <tr>
             <th scope="col">#</th>
@@ -36,23 +37,28 @@
     <tbody>
         @foreach (var item in Model)
         {
-        <tr>
+            <tr>
 
-            <th scope="row">
-                <a class="btn btn-outline-info btn-delete" data-value="@item.Barcode" data-toggle="modal" data-target="#deleteModal">
-                    <i class="far fa-trash-alt"></i>
-                </a>
-            </th>
-            <td>@item.Barcode</td>
-            <td><a href="@Url.Action("Edit",new { barcode=item.Barcode })">@item.Name</a></td>
-            <td>@item.Quantity</td>
-            <td>@item.Unit</td>
-            <td data-type="currency">@item.Price</td>
-            <td><img src="@Url.Content("~/UploadFiles/Products/Thumbnails/" + item.ImgName)" alt="@item.Name" class="img-thumbnail"></td>
-        </tr>
+                <th scope="row">
+                    <a class="btn btn-outline-info btn-delete" data-value="@item.Barcode" data-toggle="modal" data-target="#deleteModal">
+                        <i class="far fa-trash-alt"></i>
+                    </a>
+                </th>
+                <td>@item.Barcode</td>
+                <td><a href="@Url.Action("Edit",new { barcode=item.Barcode })">@item.Name</a></td>
+                <td>@item.Quantity</td>
+                <td>@item.Unit</td>
+                <td data-type="currency">@item.Price</td>
+                <td><img src="@Url.Content("~/UploadFiles/Products/Thumbnails/" + item.ImgName)" alt="@item.Name" class="img-thumbnail"></td>
+            </tr>
         }
-    </tbody>    
+    </tbody>
 </table>
+
+@*Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount*@
+
+@*@Html.PagedListPager(Model, page => Url.Action("Index", new { page }))*@
+
 
 <form method="post" action="@Url.Action("Delete")" id="form-delete" class="d-none">
     @Html.AntiForgeryToken()
