--- a/SaleManager.Web/Views/SellMarket/Index.cshtml
+++ b/SaleManager.Web/Views/SellMarket/Index.cshtml
@@ -4,48 +4,14 @@
     var controllerName = HttpContext.Current.Request.RequestContext.RouteData.Values["controller"].ToString();
     var actionName = HttpContext.Current.Request.RequestContext.RouteData.Values["action"].ToString();
 }
+<link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />
 <link rel="stylesheet" href="@Url.Content("~/Content/" + controllerName + ".css")">
-<script src="@Url.Content("~/Scripts/" + controllerName + "/" + actionName + ".js")"></script>
-
-<style>
-    tbody {
-        display: block;
-        max-height: 300px;
-        overflow-y: auto;
-    }
-
-    thead, tbody tr {
-        display: table;
-        width: 100%;
-        table-layout: fixed;
-    }
-
-    thead {
-        width: calc( 100% - 1em )
-    }
-
-    img.card-size{
-        height:5.5rem;
-    }
-    span.card-size{
-        width:5rem;
-        height:5rem;
-        overflow: hidden;
-    }
-    div.product-list{
-        height:fit-content;
-        max-height:750px;
-        overflow-y:auto;
-    }
-    div.card{
-        min-width: 7rem;
-    }
-</style>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
 <div class="row">
     <div class="col-lg-7">
         <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Barcode" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <input type="text" class="form-control" placeholder="Barcode or Name" aria-label="username" aria-describedby="button-addon2" id="recomment-name">
             <div class="input-group-append">
                 <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="fas fa-search-plus"></i></button>
             </div>
@@ -84,7 +50,7 @@
                                 <td class="d-inline-block col-1"><a href="#"><i class="far fa-trash-alt"></i></a></td>
                                 <td class="d-inline-block col-1">1</td>
                                 <td class="d-inline-block col-4">Mì Hảo Hảo chua cay</td>
-                                <td class="d-inline-block col-2">3.000</td>
+                                <td class="d-inline-block col-2" data-type="currency">3000</td>
                                 <td class="d-inline-block col-2">
                                     <div class="row">
                                         <span class="col-6 text-left justify-content-center align-self-center">5</span>
@@ -94,13 +60,13 @@
                                         </div>
                                     </div>
                                 </td>
-                                <td class="d-inline-block col-2">15.000</td>
+                                <td class="d-inline-block col-2" data-type="currency">15000</td>
                             </tr>
                             <tr>
                                 <td class="d-inline-block col-1"><a href="#"><i class="far fa-trash-alt"></i></a></td>
                                 <td class="d-inline-block col-1">2</td>
                                 <td class="d-inline-block col-4">Dầu ăn Simply 2l</td>
-                                <td class="d-inline-block col-2">75.000</td>
+                                <td class="d-inline-block col-2" data-type="currency">75000</td>
                                 <td class="d-inline-block col-2">
                                     <div class="row">
                                         <span class="col-6 text-left justify-content-center align-self-center">5</span>
@@ -110,13 +76,13 @@
                                         </div>
                                     </div>
                                 </td>
-                                <td class="d-inline-block col-2">75.000</td>
+                                <td class="d-inline-block col-2" data-type="currency">75000</td>
                             </tr>
                             <tr>
                                 <td class="d-inline-block col-1"><a href="#"><i class="far fa-trash-alt"></i></a></td>
                                 <td class="d-inline-block col-1">2</td>
                                 <td class="d-inline-block col-4">Dầu ăn Simply 2l</td>
-                                <td class="d-inline-block col-2">75.000</td>
+                                <td class="d-inline-block col-2" data-type="currency">75000</td>
                                 <td class="d-inline-block col-2">
                                     <div class="row">
                                         <span class="col-6 text-left justify-content-center align-self-center">5</span>
@@ -126,7 +92,7 @@
                                         </div>
                                     </div>
                                 </td>
-                                <td class="d-inline-block col-2">75.000</td>
+                                <td class="d-inline-block col-2" data-type="currency">75000</td>
                             </tr>
                             <tr>
                                 <td class="d-inline-block col-1"><a href="#"><i class="far fa-trash-alt"></i></a></td>
@@ -209,19 +175,19 @@
                         <div class="form-group row">
                             <label for="total" class="col-md-3 col-form-label">Tiền hàng</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" id="total" value="102.000">
+                                <input type="text" class="form-control" id="total" data-type="currency" value="102000">
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="kt" class="col-md-3 col-form-label">Khấu trừ</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" id="kt" readonly value="10.200">
+                                <input type="text" class="form-control" id="kt" data-type="currency" readonly value="10200">
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="tt" class="col-md-3 col-form-label">Thành tiền</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" id="tt" value="91.800">
+                                <input type="text" class="form-control" id="tt" data-type="currency" value="91800">
                             </div>
                         </div>
                     </div>
@@ -306,9 +272,4 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.4/js/tether.min.js"></script>
-@*<script>
-    $('#myTab a').on('click', function (e) {
-        e.preventDefault();
-        $(this).tab('show');
-    });
-</script>*@
+<script src="@Url.Content("~/Scripts/" + controllerName + "/" + actionName + ".js")"></script>
