--- a/SaleManager.Web/Views/Product/Index.cshtml
+++ b/SaleManager.Web/Views/Product/Index.cshtml
@@ -18,9 +18,13 @@
     </div>
 }
 
-<a href="@Url.Action("Add")" role="button" class="btn btn-outline-info">
-    <i class="fas fa-plus-circle"></i>
-</a>
+<div class="d-flex justify-content-between">
+    <span class="font-weight-bolder">Product</span>
+    <a href="@Url.Action("Add")" role="button" class="btn btn-outline-info">
+        <i class="fas fa-plus-circle"></i>
+    </a>
+</div>
+
 
 <table class="table table-striped datatable">
     <thead>
