--- a/SaleManager.Web/Views/SellMarket/Index.cshtml
+++ b/SaleManager.Web/Views/SellMarket/Index.cshtml
@@ -4,9 +4,9 @@
     var controllerName = HttpContext.Current.Request.RequestContext.RouteData.Values["controller"].ToString();
     var actionName = HttpContext.Current.Request.RequestContext.RouteData.Values["action"].ToString();
 }
-<link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />
+@*<link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />*@
 <link rel="stylesheet" href="@Url.Content("~/Content/" + controllerName + ".css")">
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+@*<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>*@
 
 <div class="row">
     <div class="col-lg-7">
@@ -77,87 +77,7 @@
                                     </div>
                                 </td>
                                 <td class="d-inline-block col-2" data-type="currency">75000</td>
-                            </tr>
-                            <tr>
-                                <td class="d-inline-block col-1"><a href="#"><i class="far fa-trash-alt"></i></a></td>
-                                <td class="d-inline-block col-1">2</td>
-                                <td class="d-inline-block col-4">Dầu ăn Simply 2l</td>
-                                <td class="d-inline-block col-2" data-type="currency">75000</td>
-                                <td class="d-inline-block col-2">
-                                    <div class="row">
-                                        <span class="col-6 text-left justify-content-center align-self-center">5</span>
-                                        <div class="d-flex flex-column justify-content-between">
-                                            <span><i class="fas fa-chevron-up"></i></span>
-                                            <span><i class="fas fa-chevron-down"></i></span>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="d-inline-block col-2" data-type="currency">75000</td>
-                            </tr>
-                            <tr>
-                                <td class="d-inline-block col-1"><a href="#"><i class="far fa-trash-alt"></i></a></td>
-                                <td class="d-inline-block col-1">2</td>
-                                <td class="d-inline-block col-4">Dầu ăn Simply 2l</td>
-                                <td class="d-inline-block col-2">75.000</td>
-                                <td class="d-inline-block col-2">
-                                    <div class="row">
-                                        <span class="col-6 text-left justify-content-center align-self-center">5</span>
-                                        <div class="d-flex flex-column justify-content-between">
-                                            <span><i class="fas fa-chevron-up"></i></span>
-                                            <span><i class="fas fa-chevron-down"></i></span>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="d-inline-block col-2">75.000</td>
-                            </tr>
-                            <tr>
-                                <td class="d-inline-block col-1"><a href="#"><i class="far fa-trash-alt"></i></a></td>
-                                <td class="d-inline-block col-1">2</td>
-                                <td class="d-inline-block col-4">Dầu ăn Simply 2l</td>
-                                <td class="d-inline-block col-2">75.000</td>
-                                <td class="d-inline-block col-2">
-                                    <div class="row">
-                                        <span class="col-6 text-left justify-content-center align-self-center">5</span>
-                                        <div class="d-flex flex-column justify-content-between">
-                                            <span><i class="fas fa-chevron-up"></i></span>
-                                            <span><i class="fas fa-chevron-down"></i></span>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="d-inline-block col-2">75.000</td>
-                            </tr>
-                            <tr>
-                                <td class="d-inline-block col-1"><a href="#"><i class="far fa-trash-alt"></i></a></td>
-                                <td class="d-inline-block col-1">2</td>
-                                <td class="d-inline-block col-4">Dầu ăn Simply 2l</td>
-                                <td class="d-inline-block col-2">75.000</td>
-                                <td class="d-inline-block col-2">
-                                    <div class="row">
-                                        <span class="col-6 text-left justify-content-center align-self-center">5</span>
-                                        <div class="d-flex flex-column justify-content-between">
-                                            <span><i class="fas fa-chevron-up"></i></span>
-                                            <span><i class="fas fa-chevron-down"></i></span>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="d-inline-block col-2">75.000</td>
-                            </tr>
-                            <tr>
-                                <td class="d-inline-block col-1"><a href="#"><i class="far fa-trash-alt"></i></a></td>
-                                <td class="d-inline-block col-1">2</td>
-                                <td class="d-inline-block col-4">Dầu ăn Simply 2l</td>
-                                <td class="d-inline-block col-2">75.000</td>
-                                <td class="d-inline-block col-2">
-                                    <div class="row">
-                                        <span class="col-6 text-left justify-content-center align-self-center">5</span>
-                                        <div class="d-flex flex-column justify-content-between">
-                                            <span><i class="fas fa-chevron-up"></i></span>
-                                            <span><i class="fas fa-chevron-down"></i></span>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="d-inline-block col-2">75.000</td>
-                            </tr>
+                            </tr>                            
                         </tbody>
                     </table>
                     <div class="total-money">
